--- a/src/html.html
+++ b/src/html.html
@@ -12,7 +12,7 @@
     <title>MY Project</title>
 </head>
 <body>
-<h1>Hello</h1>
+<h1>Hello HTML</h1>
 <div class="container">
     <img src="images/headerBg.png">
 </div>
